Create Calling options tab in Interface Category
Change-Id: I48d4a576d695a2160bbfca5282a9a0990ddd84fd

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="buttons_volume_title">Volume</string>
     <string name="interface_theme_title">Theme</string>
     <string name="interface_misc_title">Misc</string>
+    <string name="interface_callopt_title">Call options</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
