Create Weather tab in Interface Category
Change-Id: Ie995b552c298ba7d36c09906f64843c824b8972f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="interface_theme_title">Theme</string>
     <string name="interface_misc_title">Misc</string>
     <string name="interface_callopt_title">Call options</string>
+    <string name="interface_weather_title">Weather</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
