Create Battery LED tab in Interface Category
Change-Id: If7ae20c1cf5358c0ed7b0fd4543a99ea9a42ee48

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="interface_misc_title">Misc</string>
     <string name="interface_callopt_title">Call options</string>
     <string name="interface_weather_title">Weather</string>
+    <string name="interface_batteryled_title">Battery LED</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
