Incall Vibration options [3/3]
Change-Id: Ie5ea1792d58bfb29f82c5b642ec1396b7037dab4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -289,4 +289,9 @@
     <string name="bliss_theme_select_none">Disabled</string>
     <string name="bliss_theme_select_summary">Browse and select installed Bliss themes</string>
 
+    <!-- Incall vibrate options -->
+    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
+    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
+    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
+
 </resources>
