Allow vibration instead of beep for in-call notifications [2/2]
Change-Id: Icd1f9661987b7eabeb512f782b71de5aa3847e55

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -293,5 +293,7 @@
     <string name="incall_vibrate_connect_title">Vibrate on connect</string>
     <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
     <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
+    <string name="incall_notifications_vibrate">Less annoying in-call notifications</string>
+    <string name="incall_notifications_vibrate_summary">Vibrate instead of playing a sound for in-call notifications</string>
 
 </resources>
