Bring AppOps into Blissify
Change-Id: Ie1c714b07ed9f6e4adefa9d79e347fcaad174f12

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -303,4 +303,7 @@
     <string name="flashlight_on_call_dnd">Only in DND mode</string>
     <string name="flashlight_on_call_always">Always</string>
 
+    <!-- AppOps -->
+    <string name="app_ops_settings_title">App Ops</string>
+
 </resources>
