--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="interface_callopt_title">Call options</string>
     <string name="interface_weather_title">Weather</string>
     <string name="interface_batteryled_title">Battery LED</string>
+    <string name="recents_style_title">Style</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
