Blissify: Battery LED Settings
Change-Id: Iaf630a9f4faecf9ee857822eb69e571b5d2f4679

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -307,4 +307,23 @@
     <!-- AppOps -->
     <string name="app_ops_settings_title">App Ops</string>
 
+    <!-- Battery light settings  -->
+    <string name="battery_light_cat">Battery light color when charging</string>
+    <string name="batterylight_title">Battery LED settings</string>
+    <string name="battery_light_enable">Enable</string>
+    <string name="battery_low_pulse_title">Pulse if battery low</string>
+    <string name="battery_light_only_full_charge_title">Only light up when fully charged</string>
+    <string name="battery_light_list_title">Colors</string>
+    <string name="battery_light_low_color_title">Battery low</string>
+    <string name="battery_light_medium_color_title">Charging</string>
+    <string name="battery_light_full_color_title">Charged (90%)</string>
+    <string name="battery_light_really_full_color_title">Charged (100%)</string>
+    <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
+    <string name="fast_color_cat_title">Fast charging</string>
+    <string name="fast_charging_led_enabled_title">Enable fast charging color</string>
+    <string name="fast_charging_led_enabled_summary">When fast charging, use different color till 90% charged</string>
+    <string name="fast_charging_light_color_title">Color</string>
+    <string name="fast_charging_light_color_summary"></string>
+    <string name="edit_battery_settings">Edit battery settings</string>
+
 </resources>
