--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="interface_weather_title">Weather</string>
     <string name="interface_batteryled_title">Battery LED</string>
     <string name="recents_style_title">Style</string>
+    <string name="qs_panel_title">Panel</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
