--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -342,4 +342,13 @@
     <string name="qs_panel_alpha_title">Quick Settings opacity</string>
     <string name="qs_panel_alpha_summary">Configure opacity of background</string>
 
+    <!-- OmniSwitch -->
+    <string name="navbar_recents_style_title">Recents style</string>
+    <string name="keys_action_app_switch_defaut">Default</string>
+    <string name="keys_action_omniswitch_short">OmniSwitch</string>
+    <string name="omniswitch_settings">Settings</string>
+    <string name="omniswitch_dialog_running_new">OmniSwitch is currently not enabled. Please enable it in the app settings.</string>
+    <string name="omniswitch_dialog_unavail">OmniSwitch is not installed.</string>
+    <string name="omniswitch_title">Recents style</string>
+
 </resources>
