--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -364,4 +364,13 @@
     <string name="resolve_failed_summary">Resolving app failed</string>
     <string name="choose_app">Choose app</string>
 
+    <!-- Dashboard conditions--> 
+    <string name="dashboard_category">Dashboard options</string> 
+    <string name="dashboard_conditions_title">Dashboard conditions</string> 
+    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string> 
+    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string> 
+    <string name="dashboard_suggestions_title">Dashboard suggestions</string> 
+    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string> 
+    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string> 
+
 </resources>
