Add interpolators to qs tiles animation [2/2]
Change-Id: I5adf428e0bd0b49b190dd73ae432691bb55ad0a7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -199,6 +199,16 @@
     <string name="qs_tile_animation_duration_fast">fast</string>
     <string name="qs_set_animation_style">Animation is set to %1$s</string>
     <string name="qs_set_animation_duration">Animation duration is set to %1$s</string>
+    <string name="qs_tile_animation_interpolator_title">Animation interpolator</string> 
+    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
+    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
+    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
+    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
+    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
+    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
+    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
+    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
+    <string name="qs_set_animation_interpolator">%1$s</string>
 
     <!-- Statusbar Clock -->
     <string name="status_bar_clock_show">Show clock and date</string>
