Disable Quick Settings on secure lockscreen (2/2)
Change-Id: I2fab2d45f53b6523f45ce6d688e3b2fc89e12e56

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -368,6 +368,9 @@
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
 
+    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
+    <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
+
     <!-- OmniSwitch -->
     <string name="navbar_recents_style_title">Recents style</string>
     <string name="keys_action_app_switch_defaut">Default</string>
