Add Quick Settings Pulldown options
Change-Id: I71e35bfc212344dbf8bcffe8b220dc602236a425

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -371,6 +371,15 @@
     <string name="block_on_secure_keyguard_title">Disable quick settings</string>
     <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
 
+    <!-- Quick pull down-->
+    <string name="quick_pulldown_title">Quick pulldown</string>
+    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
+    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
+    <string name="quick_pulldown_off">Off</string>
+    <string name="quick_pulldown_left">Left</string>
+    <string name="quick_pulldown_right">Right</string>
+    <string name="quick_pulldown_always">Always</string>
+
     <!-- OmniSwitch -->
     <string name="navbar_recents_style_title">Recents style</string>
     <string name="keys_action_app_switch_defaut">Default</string>
