--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -392,6 +392,8 @@
     <!-- Brightness slider -->
     <string name="brightness_slider_title">Brightness slider</string>
     <string name="brightness_slider_summary">Show the brightness slider underneath quick settings</string>
+    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
+    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
 
     <!-- OmniSwitch -->
     <string name="navbar_recents_style_title">Recents style</string>
