--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -396,6 +396,8 @@
     <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
     <string name="brightness_icon_title">Auto Brightness Icon</string>
     <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
+    <string name="qs_show_info_header_title">Show information header</string>
+    <string name="qs_show_info_header_summary">Information displayed at top of quick settings panel</string>
 
     <!-- OmniSwitch -->
     <string name="navbar_recents_style_title">Recents style</string>
