Add a screen off animation tab
Change-Id: I7df690c1cab595c5bc468f25b69a2ae80c0ce226

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,7 @@
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
+    <string name="screenoff_animation_title">Screen off</string>
     <string name="toast_animation_title">Toast</string>
     <string name="qstiles_animation_title">QS Tile</string>
 
