--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -502,5 +502,10 @@
     <string name="heads_up_title">Enable</string>
     <string name="heads_up_summary_enabled">Heads up notifications are enabled</string>
     <string name="heads_up_summary_disabled">Heads up notifications are disabled</string>
+    <string name="add_heads_up_package">Add app</string>
+    <string name="add_heads_up_blacklist_summary">Don\'t show heads up from these applications</string>
+    <string name="heads_up_blacklist_title">Blacklist</string>
+    <string name="heads_up_blacklist_dialog_delete_title">Delete</string>
+    <string name="heads_up_blacklist_dialog_delete_message">Remove selected item?</string>
 
 </resources>
