Blissify: Implement HideAppFromRecents (HAFR) Settings
Change-Id: I81359a63dca50fc5b07af165d019d1a51f291b45

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -508,4 +508,10 @@
     <string name="heads_up_blacklist_dialog_delete_title">Delete</string>
     <string name="heads_up_blacklist_dialog_delete_message">Remove selected item?</string>
 
+    <!-- Hide Apps from Recents -->
+    <string name="hide_apps_from_recents_title">Hide apps from recents</string>
+    <string name="hide_apps_from_recents_summary">Prevent apps from appearing in recents</string>
+    <string name="hide_from_recents_add_app">Add app</string>
+    <string name="title_activity_carbon_recents_settings">Recents</string>
+
 </resources>
