--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -174,7 +174,8 @@
     <string name="animation_duration_default">Default</string>
 
     <!-- Screen off animation -->
-    <string name="screen_off_animation_default">Default</string>
+    <string name="screen_off_animation_fade">Simple fade</string>
+    <string name="screen_off_animation_color">Color fade</string>
     <string name="screen_off_animation_crt">CRT</string>
     <string name="screen_off_animation_scale">Scale</string>
     <string name="screen_off_animation_title">Screen off animation</string>
