Blissify: QS footer visibilities [2/2]
Change-Id: Ice5a3c6db1f0da3ae71e14fed83793943b328dfd

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -601,4 +601,10 @@
     <string name="SHORT_MIN_LIGHT_MAINTENANCE_TIME">Maintenance mode light doze min timeout</string>
     <string name="SHORT_MIN_DEEP_MAINTENANCE_TIME">Maintenance mode full doze min timeout</string>
 
+    <!-- QS footer icons -->
+    <string name="qs_footer_services_title">Show Running Services icon</string>
+    <string name="qs_footer_services_summary">Display Running Services icon in quick settings footer</string>
+    <string name="qs_footer_settings_title">Show Settings icon</string>
+    <string name="qs_footer_settings_summary">Display Settings icon in quick settings footer</string>
+
 </resources>
