Blissify: add toggle for the onehand ui mode [2/2]
Change-Id: Ieb576b78aa5a9a55b7fc2385c4f18a389823132d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -623,4 +623,8 @@
     <string name="smart_pixels_percent">Percent of pixels to disable</string>
     <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
 
+    <!-- Onehand UI mode -->
+    <string name="one_hand_mode_title">Enable using one-hand mode</string>
+    <string name="one_hand_mode_summary">Allow swiping across right or left on navbar to enable</string>
+
 </resources>
