--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -304,11 +304,13 @@
     <string name="use_old_mobiletype_title">Use old mobile type style</string>
     <string name="use_old_mobiletype_summary">Merge signal and type icons</string>
 
-    <!--Double Tap to Sleep Lockscreen-->
-    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
-
-    <!--Double Tap to Sleep Statusbar-->
-    <string name="double_tap_sleep_gesture_title">Double tap to sleep on status bar</string>
+    <!--Double Tap Gestures-->
+    <string name="doubletap_gestures_title">Double tap</string>
+    <string name="doubletap_gestures_summary">Options for double tap gestures</string>
+    <string name="double_tap_sleep_lockscreen">Lockscreen</string>
+    <string name="double_tap_sleep_lockscreen_summary">Double tap to sleep on lockscreen</string>
+    <string name="double_tap_sleep_gesture_title">Statusbar</string>
+    <string name="double_tap_sleep_gesture_summary">Double tap to sleep on status bar</string>
 
     <!-- Lockscreen weather -->
     <string name="lockscreen_weather_title">Show weather condition</string>
