--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -629,4 +629,8 @@
     <string name="one_hand_mode_title">Enable using one-hand mode</string>
     <string name="one_hand_mode_summary">Allow swiping across right or left on navbar to enable</string>
 
+    <!-- WiFi Activity switch -->
+    <string name="statusbar_show_wifi_activity_title">Show Wi-Fi data indicators</string>
+    <string name="statusbar_show_wifi_activity_summary">Show indicators when Wi-Fi is sending/receiving data like mobile</string>
+
 </resources>
