--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -645,4 +645,11 @@
     <string name="status_bar_temperature_hide_scale_hide_image">Show temp without scale</string>
     <string name="status_bar_show_image">Show image</string>
 
+    <!-- QS tile styles -->
+    <string name="qs_tile_style_title">QS Tile Style</string>
+    <string name="qstile_default">Default</string>
+    <string name="qstile_circle_trim">Circle (Trim)</string>
+    <string name="qstile_dual_tone_circle">Dual-Toned Circle (Trim)</string>
+    <string name="qstile_squircle_trim">Squircle (Trim)</string>
+
 </resources>
