--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -650,6 +650,9 @@
     <string name="qstile_default">Default</string>
     <string name="qstile_circle_trim">Circle (Trim)</string>
     <string name="qstile_dual_tone_circle">Dual-Toned Circle (Trim)</string>
+    <string name="qstile_oreo">Oreo</string>
+    <string name="qstile_oreo_circle_trim">Oreo (Circle Trim)</string>
+    <string name="qstile_oreo_squircle_trim">Oreo (Squircle Trim)</string>
     <string name="qstile_squircle_trim">Squircle (Trim)</string>
 
 </resources>
