--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -655,4 +655,15 @@
     <string name="qstile_oreo_squircle_trim">Oreo (Squircle Trim)</string>
     <string name="qstile_squircle_trim">Squircle (Trim)</string>
 
+    <!-- Statusbar ticker -->
+    <string name="statusbar_icons_cat">Icons</string>
+    <string name="statusbar_notifi_cat">Notifications</string>
+    <string name="status_bar_ticker_title">Ticker</string>
+    <string name="status_bar_show_ticker_title">Ticker</string>
+    <string name="status_bar_show_ticker_summary">Notification preview in status bar</string>
+    <string name="ticker_animation_mode_title">Ticker animation</string>
+    <string name="ticker_animation_mode_alpha_fade">Fade</string>
+    <string name="ticker_animation_mode_scroll">Scroll</string>
+    <string name="ticker_tick_duration_title">Ticker duration</string>
+
 </resources>
