Blissify: Sensor block per-package switch (2/2)
Change-Id: I094cf2a6ebe6cb73a1cca73790e6dd098d93637c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -684,4 +684,8 @@
     <string name="screen_state_on_delay_title">Screen On actions delay</string>
     <string name="screen_state_on_delay_summary">Number of minutes to wait before performing actions after screen on</string>
 
+    <!-- Sensor block per-package -->
+    <string name="sensor_block_title">Sensor block per-package</string>
+    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery.</string>
+
 </resources>
