Status Bar Notifications count switch
Change-Id: I316bc49f9b1c510d122b5e28ce84343676aaf424

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -688,4 +688,8 @@
     <string name="sensor_block_title">Sensor block per-package</string>
     <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery.</string>
 
+    <!-- Status Bar Notifi Count Dot -->
+    <string name="status_bar_notif_count_title">Show notification count</string>
+    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
+
 </resources>
