--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -516,10 +516,12 @@
     <string name="heads_up_summary_enabled">Heads up notifications are enabled</string>
     <string name="heads_up_summary_disabled">Heads up notifications are disabled</string>
     <string name="add_heads_up_package">Add app</string>
+    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
     <string name="add_heads_up_blacklist_summary">Don\'t show heads up from these applications</string>
     <string name="heads_up_blacklist_title">Blacklist</string>
-    <string name="heads_up_blacklist_dialog_delete_title">Delete</string>
-    <string name="heads_up_blacklist_dialog_delete_message">Remove selected item?</string>
+    <string name="heads_up_stoplist_title">Stoplist</string>
+    <string name="dialog_delete_title">Delete</string>
+    <string name="dialog_delete_message">Remove selected item?</string>
 
     <!-- Hide Apps from Recents -->
     <string name="hide_apps_from_recents_title">Hide apps from recents</string>
