--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -278,6 +278,9 @@
     <string name="clock_date_right">Right of time</string>
     <string name="clock_date_left">Left of time</string>
     <string name="clock_date_position">Date position</string>
+    <string name="status_bar_clock_font_style_title">Font style</string>
+    <string name="status_bar_clock_font_style_summary">%1$s</string>
+    <string name="status_bar_clock_font_size_title">Font size</string>
     <string name="menu_save">Save</string>
     <string name="menu_cancel">Cancel</string>
 
